# agio-pipe

./: .gitignore  README.md  pyproject.toml
agio_pipe/: __agio__.yml  __init__.py  exceptions.py
agio_pipe/base_classes/: export_container.py  load_container.py  protocols.py  publish_scene.py
agio_pipe/chips/publish_scene/: default_standalone_scene.py  export_container.py
agio_pipe/entities/: asset.py  product.py  product_type.py  published_file.py  sequence.py  shot.py  task.py  version.py
agio_pipe/package_settings/: local_settings.py  workspace_layout.yml  workspace_settings.py
agio_pipe/plugins/: callbacks.py
agio_pipe/plugins/application_api/: standalone_main.py
agio_pipe/plugins/commands/: pipe_info_cmd.py  publish_cmd.py
agio_pipe/plugins/publish_scene/: standalone_scene.py
agio_pipe/publish/: exceptions.py  instance.py  publish_core.py  publish_engine_base_plugin.py  publish_scene_base_plugin.py  publish_session.py  published_file.py  session_store.py
agio_pipe/publish/containers/: export_container_base.py  load_container_base.py
agio_pipe/publish/tools/: collect_info.py  create_version.py
agio_pipe/schemas/: version.py
agio_pipe/utils/: manage_products.py  path_solver.py  template_solver.py  template_utils.py
