[project]
name = "agio-pipe"
version = "0.0.3"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyseq>=0.9.0",
]
license = "MIT"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"agio_pipe" = [
    "__agio__.yml",
]
